# TSE

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ask.ps1  ask.sh  install.ps1  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examai/: __init__.py  config.py  database.py  main.py
examai/ai/: client.py  engine.py
examai/formatter/: export.py  text.py
examai/pdf/: embeddings.py  processor.py  search.py
examai/utils/: helpers.py  logger.py
portal/src/app/: layout.tsx  page.tsx
portal/src/app/api/admin/config/: route.ts
portal/src/app/api/admin/stats/: route.ts
portal/src/app/api/chat/: route.ts
tests/: __init__.py  test_ai.py  test_config.py  test_database.py  test_formatter.py  test_pdf.py
tse/: __init__.py  config.py  database.py  main.py
tse/ai/: client.py  engine.py  modes.py
tse/formatter/: export.py  text.py
tse/pdf/: embeddings.py  processor.py  search.py
tse/utils/: logger.py
