[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "examai"
version = "1.0.0"
description = "An AI-powered Terminal Assistant for Engineering Students."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "pymupdf>=1.22.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.20.0",
    "python-docx>=0.8.11",
    "fpdf2>=2.7.0",
    "pymysql>=1.1.0",
    "cryptography>=41.0.0",
]

[project.scripts]
examai = "examai.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["examai*"]
